HDS-2480 Add max-width of 100% to list item to prevent content overflow

--- a/packages/components/app/styles/components/app-footer.scss
+++ b/packages/components/app/styles/components/app-footer.scss
@@ -94,6 +94,7 @@ $app-footer-icon-text-gap: 6px;
   display: flex;
   align-items: center;
   justify-content: center;
+  max-width: 100%;
 }
 
 .hds-app-footer__copyright {
